--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "todolist-cli"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,6 +9,9 @@ edition = "2021"
 chrono = "0.4.38"
 clap = { version = "4.5.9", features = ["derive"] }
 inquire = {version =  "0.7.5", default-features = false, features = ["editor", "date", "console"]}
+
+#ORM не используется, но используется сереализация.
+# Проект достаточно простой как и его хранимые оюъекты.
+rusqlite = {version ="0.32.0", features = ["serialize"]}
 serde = "1.0.204"
 serde_json = "1.0.120"
-sqlite = "0.36.0"
