--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "todolist-cli"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,6 +12,6 @@ inquire = {version =  "0.7.5", default-features = false, features = ["editor", "
 
 #ORM не используется, но используется сереализация.
 # Проект достаточно простой как и его хранимые оюъекты.
-rusqlite = {version ="0.32.0", features = ["serialize"]}
+rusqlite = {version ="0.32.0", features = ["serialize", "chrono"]}
 serde = "1.0.204"
 serde_json = "1.0.120"
